# captchaAutoLabeling

./: .env_template  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  auto_detect.py  image_source.py  model.py  onnx.py  orientation.py
